RESOLVED FIXED171896
Unindent some code in Watchdog::shouldTerminate().
https://bugs.webkit.org/show_bug.cgi?id=171896
Summary Unindent some code in Watchdog::shouldTerminate().
Mark Lam
Reported 2017-05-09 16:24:24 PDT
I should have done this before I landed r213107, but I forgot. Unindenting it now.
Attachments
patch for landing. (4.11 KB, patch)
2017-05-09 16:28 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2017-05-09 16:28:38 PDT
Created attachment 309560 [details] patch for landing. rs=Keith Miller
WebKit Commit Bot
Comment 2 2017-05-09 17:03:14 PDT
Comment on attachment 309560 [details] patch for landing. Clearing flags on attachment: 309560 Committed r216558: <http://trac.webkit.org/changeset/216558>
WebKit Commit Bot
Comment 3 2017-05-09 17:03:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.