Unindent some code in Watchdog::shouldTerminate(). https://bugs.webkit.org/show_bug.cgi?id=171896

Rubber stamped by Keith Miller.

I should have done this before I landed r213107, but I forgot.  Unindenting it now.

* runtime/Watchdog.cpp:
(JSC::Watchdog::shouldTerminate):


Canonical link: https://commits.webkit.org/188816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216558 268f45cc-cd09-0410-ab3c-d52691b4dbfc